RESOLVED FIXED311622
Unreviewed, do not unsupported SIMD B3 tests on x64
https://bugs.webkit.org/show_bug.cgi?id=311622
Summary Unreviewed, do not unsupported SIMD B3 tests on x64
Yusuke Suzuki
Reported 2026-04-07 00:37:25 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-07 00:37:34 PDT
Yusuke Suzuki
Comment 2 2026-04-07 00:38:20 PDT
EWS
Comment 3 2026-04-07 00:40:48 PDT
Committed 310692@main (ed562b94fa83): <https://commits.webkit.org/310692@main> Reviewed commits have been landed. Closing PR #62174 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.