Unreviewed, do not unsupported SIMD B3 tests on x64 https://bugs.webkit.org/show_bug.cgi?id=311622 rdar://174219922

Some patterns are unsupported on x64, while they are running on testb3.
Do not run them on x64.

Test: Source/JavaScriptCore/b3/testb3_1.cpp

* Source/JavaScriptCore/b3/testb3_1.cpp:
(run):

Canonical link: https://commits.webkit.org/310692@main